[package]
name = "stryke-scylla"
version = "0.3.0"
edition = "2021"
description = "ScyllaDB / Cassandra cdylib for the stryke `scylla` package — dlopened in-process via stryke's FFI bridge"
authors = ["MenkeTechnologies"]
license = "MIT"
repository = "https://github.com/MenkeTechnologies/stryke-scylla"
homepage = "https://menketechnologies.github.io/stryke-scylla/"
publish = false

[lib]
name = "stryke_scylla"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
# ScyllaDB's official pure-Rust CQL driver (also speaks Apache Cassandra).
# The driver is async; the cdylib owns a single embedded tokio runtime and
# block_on's each call, caching the Session per (nodes, auth, keyspace).
scylla = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
once_cell = "1"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
